<resources>



    <string name="app_name">fatpig</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_user">Жирная свинья</string>
    <string name="nav_settings_button">Настройка кнопок еды</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_name">Имя не заполнено</string>
    <string name="not_age">Говно вопрос-возраст не верный</string>
    <string name="not_weith">Где вес? Жирная свинья..</string>
    <string name="nav_home">Домой</string>
    <string name="products">Продукты</string>
    <string name="work">Энергозатраты</string>
    <string name="cancel">Закрыть</string>
    <string name="select">Выбрать</string>
    <string name="select1">select</string>
    <string name="all">all</string>
    <string name="add">add</string>
    <string name="edit">edit</string>
    <string name="nav_settings_core">Настройки приложения</string>
    <string name="toHome">На главную</string>
    <string name="settings_percent_title">Процент уменьшения калорий </string>
    <string name="settings_percent">По умолчанию 80%</string>
    <string name="color_panel1">Цвет первой панели</string>
    <string name="color_panel2">Цвет второй панели</string>
    <string name="color_panel3">Цвет третьей панели</string>
    <string name="color_panel_top">Цвет панели контейнера</string>
    <string name="map">Карты</string>
    <string name="title_activity_maps">Map</string>
    <string name="tarck">Треккинг</string>
    <string name="distance">Расстояние (км.):</string>
    <string name="speed">Cкорость (км./час.):</string>
    <string name="calories">Калории (ккал.):</string>
    <string name="error1">Поле название или калорий не заполено</string>
    <string name="editor">Редактировать</string>
    <string name="addnew">Добавить новое</string>
    <string name="createButton">Создать кнопку</string>
    <string name="menu1">Изменить процент уменьшения калорий</string>
    <string name="menu2">Отрыгнуть последний кусок жратвы</string>
    <string name="track_chow">Маршруты</string>
    <string name="life">Дневник</string>
    <string name="ok">ok</string>
    <string name="close">Close</string>
    <string name="showhelp">Показывать панель помощи.</string>
    <string name="nav_settings_button_work">Настройка кнопок затрат</string>
    <string name="nav_calculator">Калькулятор</string>
    <string name="speedCore">Скорость средняя:</string>
</resources>
