<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_pig"
            android:title="@string/nav_user" />
        <item
            android:id="@+id/nav_settings_core"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings_core" />
        <item
            android:visible="false"
            android:id="@+id/nav_settings_button"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_settings_button" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_eat2"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_works"
            android:title="@string/work" />
        <item
            android:id="@+id/nav_treack"
            android:icon="@drawable/ic_runner3"
            android:title="@string/tarck" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_maps"
            android:title="@string/map" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_treack_show"
                android:icon="@drawable/ic_tables"
                android:title="@string/track_chow" />
            <item
                android:id="@+id/nav_life"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/life" />
        </menu>
    </item>

</menu>
