<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.omsk.bitnic.fatpig.FTrack">

    <LinearLayout
        android:id="@id/panel_base"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/data_track"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25">

                <com.omsk.bitnic.fatpig.PausableChronometer
                    style="@style/chonometer"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/chronometer"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.9" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="right|center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1">

                    <ImageButton
                        android:layout_gravity="right|top"
                        android:layout_marginRight="5dp"
                        android:id="@+id/menu_map"
                        android:background="@null"
                        android:src="@drawable/ic_menu_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/point_count"
                        android:gravity="center_horizontal"
                        style="@style/labelBase"
                        android:textSize="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="center"
                            android:id="@+id/diastace"
                            android:textSize="25dp"
                            style="@style/labelBase"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                        <TextView
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:text="@string/distance"
                            android:textSize="@dimen/text_track"
                            style="@style/labelBase"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />


                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="center"
                            style="@style/labelBase"
                            android:id="@+id/calories"
                            android:textSize="25dp"

                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                        <TextView
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:textSize="@dimen/text_track"
                            style="@style/labelBase"
                            android:text="@string/calories"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />



                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="center"
                            android:text="0.0"
                            android:id="@+id/speed"
                            android:textSize="25dp"
                            style="@style/labelBase"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                        <TextView
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:text="@string/speed"
                            android:textSize="@dimen/text_track"
                            style="@style/labelBase"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />



                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="center"
                            android:text="0.0"
                            android:id="@+id/speed_core"
                            android:textSize="25dp"
                            style="@style/labelBase"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                        <TextView
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:text="@string/speedCore"
                            android:textSize="@dimen/text_track"
                            style="@style/labelBase"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />



                    </LinearLayout>

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.40">
                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/graph1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </LinearLayout>
                <LinearLayout
                    android:background="@color/panel_1"
                    android:orientation="horizontal"
                    android:id="@+id/graph2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </LinearLayout>

            </LinearLayout>






        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">

            <ImageButton

                android:tag="1"
                android:id="@+id/tarack_run"
                android:layout_margin="10dp"
                android:src="@drawable/select_start"
                style="@style/buttonRound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:tag="2"
                android:id="@+id/tarack_pause"
                android:layout_margin="10dp"
                android:src="@drawable/select_pause"
                style="@style/buttonRound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:tag="3"
                android:id="@+id/tarack_stop"
                android:layout_margin="10dp"
                android:src="@drawable/select_stop"
                style="@style/buttonRound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>
